--- a/client/src/app/app.css
+++ b/client/src/app/app.css
@@ -149,12 +149,12 @@ h1.recipe {
   border-radius:12px;
   margin-bottom: -25%;
   overflow: hidden;
-  opacity: 70%;
+  opacity: 0.7;
   z-index: 1;
 }
 
 .btn-note img:hover{
-  opacity: 100%;
+  opacity: 1;
 }
 
 .recipe-title {
